src/test/ui/span/move-closure.stderr
error[E0308]: mismatched types
  --> $DIR/move-closure.rs:15:17
   |
15 |     let x: () = move || ();
   |                 ^^^^^^^^^^- help: try using a conversion method: `.into()`
   |                 |
   |                 expected (), found closure
   |
   = note: expected type `()`
              found type `[closure@$DIR/move-closure.rs:15:17: 15:27]`

error: aborting due to previous error

